@@ -37,3 +37,4 @@ Dmitry ILYIN: Patches
 Guillaume ROUSSE: various patches for Xen support
 Lucas MASSE: various patches for Solaris support
 Adam BUCHBINDER: various patches 
+Bernhard Denner: various patches
